--- a/changelog.txt
+++ b/changelog.txt
@@ -1,13 +1,19 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.0
+Date: 2025.5.27
+  Changes:
+    - Fixed locale files of calknut and guar products
+    - Added back calknut and guar recipes
+---------------------------------------------------------------------------------------------------
 Version: 1.0.1
 Date: 2025.5.27
   Changes:
-    Changed the name of soybean and coconut.
+    - Changed the name of soybean and coconut.
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2025.5.26
   Changes:
-    Ported everything to 2.0
+    - Ported everything to 2.0
 ---------------------------------------------------------------------------------------------------
 Version: 0.0.22
 Date: 2020.11.04
