--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.0
+Date: ???
+  Changes:
+    - Added pressed tofu which can make vegan jerky.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2025.5.27
   Changes:
