--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.2
+Date: 2025.5.30
+  Changes:
+    - Hardcore Vegetarian now removes slaughtering recipes
+---------------------------------------------------------------------------------------------------
 Version: 1.1.1
 Date: 2025.5.30
   Changes:
