The big burlap sack update

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.0
+Date: ???
+  Changes:
+    - Non-viable Vrauk Mass now requires burlap sacks.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 2025.5.30
   Changes:
