--- a/changelog.txt
+++ b/changelog.txt
@@ -2,6 +2,7 @@
 Version: 1.2.0
 Date: ???
   Changes:
+    - Citric Acid can be converted between py veganism and py version
     - Non-viable Vrauk Mass now requires burlap sacks.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
