Cottongut NVM added

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.0
+Date: ???
+  Changes:
+    - Cottongut Non-viable Mass recipes added.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.0
 Date: ???
   Changes:
