--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ Date: ???
   Changes:
     - Non-viable Vrauk Mass now requires burlap sacks.
     - Added Auog Non-viable mass recipes
+    - Non-viable Vrauk Mass recipes reworked
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 2025.5.30
