--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.4
+Date: tba
+  Changes:
+    - Removed blood bags and pseudodaemona.
+---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: 2025.6.3
   Changes:
