--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.2.1
+Date: 2025.6.11
+  Changes:
+    - Better Fur Tuft and Bag recipe
+---------------------------------------------------------------------------------------------------
 Version: 1.2.0
 Date: 2025.6.9
   Changes:
