--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,9 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
-Date: ???
+Date: 2025.7.23
   Changes:
     - Cottongut Non-viable Mass recipes added.
+---------------------------------------------------------------------------------------------------
 Version: 1.2.1
 Date: 2025.6.11
   Changes:
