--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.3.1
+Date: 2025.7.23
+  Changes:
+    - Fixed bug caused by melon.
+---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 2025.7.23
   Changes:
