--- a/changelog.txt
+++ b/changelog.txt
@@ -1,8 +1,13 @@
 ---------------------------------------------------------------------------------------------------
-Version: 1.3.1
+Version: 1.3.2
 Date: 2025.7.23
   Changes:
     - Fixed bug caused by melon.
+---------------------------------------------------------------------------------------------------
+Version: 1.3.1
+Date: 2025.7.23
+  Changes:
+    - Fixed bug caused by melon (`dirty-water-light` -> `tailings`).
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.0
 Date: 2025.7.23
