--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,8 @@
 Version: 1.3.2
 Date: 2025.7.23
   Changes:
-    - Fixed bug caused by melon.
+    - Fixed pyveganism item group sorting.
+    - Rebalanced auogs to be less expensive
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 2025.7.23
