--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.2
+Date: 2025.8.9
+  Changes:
+    - Filament made in biofactory
+---------------------------------------------------------------------------------------------------
 Version: 1.4.1
 Date: 2025.8.9
   Changes:
