Revert "Reapply "`dirty-water-light` -> `tailings`""
This reverts commit 475ea74dbc90cf2612a043a167f6ee5875f1c5b4.

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.3
+Date: 2025.8.9
+  Changes:
+    - Fixed dirty-water-light rename again
+---------------------------------------------------------------------------------------------------
 Version: 1.4.2
 Date: 2025.8.9
   Changes:
