--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.4
+Date: 2025.8.12
+  Changes:
+    - Updated to the new dirty-water-light rename (get teased by changelog forever)
+
+---------------------------------------------------------------------------------------------------
 Version: 1.4.3
 Date: 2025.8.9
   Changes:
