--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.4.5
+Date: 2025.8.12
+  Changes:
+    - Updated to the new dirty-water-light rename for real this time.
+---------------------------------------------------------------------------------------------------
 Version: 1.4.4
 Date: 2025.8.12
   Changes:
