--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: ???
+Date: ???
+  Changes:
+    - Added new mechanical dig-o-sauruses that eat meat still.
+---------------------------------------------------------------------------------------------------
 Version: 1.4.5
 Date: 2025.8.12
   Changes:
