--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,17 @@
 ---------------------------------------------------------------------------------------------------
-Version: ???
-Date: ???
+Version: 1.5.1
+Date: 2025.8.14
   Changes:
+    - Fixed the changelog
+---------------------------------------------------------------------------------------------------
+Version: 1.5.0
+Date: 2025.8.14
+  Changes:
+    - DCM can be made earlier on with methyl chloride
+    - Vegan arqad queen loop
+    - You can print animals directly from filament now
+    - Made containers cheaper
+    - Arqad honey from nectar process using DCM and Benzene
     - Added new mechanical dig-o-sauruses that eat meat still.
 ---------------------------------------------------------------------------------------------------
 Version: 1.4.5
