--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.0
+Date: ???
+  Changes:
+    - Ulric non viable mass added
+---------------------------------------------------------------------------------------------------
 Version: 1.5.1
 Date: 2025.8.14
   Changes:
