--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,8 @@ Version: 1.6.0
 Date: ???
   Changes:
     - Ulric non viable mass added
+    - Zipir non viable fluid added
+    - Korlex non viable mass added
 ---------------------------------------------------------------------------------------------------
 Version: 1.5.1
 Date: 2025.8.14
