--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.2
+Date: 2025.8.14
+  Changes:
+    - Fixed locale
+---------------------------------------------------------------------------------------------------
 Version: 1.6.1
 Date: 2025.8.14
   Changes:
