--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.3
+Date: 2025.8.15
+  Changes:
+    - Fixed vegan alternative recipes not existing
+---------------------------------------------------------------------------------------------------
 Version: 1.6.2
 Date: 2025.8.14
   Changes:
