Made it cheaper

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.5
+Date: 2025.8.18
+  Changes:
+    - The Arqad recipe should be cheaper now
+---------------------------------------------------------------------------------------------------
 Version: 1.6.4
 Date: 2025.8.15
   Changes:
