Adjusted recipes again

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,13 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.6
+Date: 2025.8.18
+  Changes:
+    - Adjusted the balance again on the recipes.
+---------------------------------------------------------------------------------------------------
 Version: 1.6.5
 Date: 2025.8.18
   Changes:
+    - Digosaurs should now work!
     - The Arqad recipe should be cheaper now
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.4
