--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.7
+Date: 2025.8.18
+  Changes:
+    - Removed non-py beacons
+---------------------------------------------------------------------------------------------------
 Version: 1.6.6
 Date: 2025.8.18
   Changes:
