--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.8
+Date: 2025.8.18
+  Changes
+    - Vrauk mk02 exists ty
+---------------------------------------------------------------------------------------------------
 Version: 1.6.7
 Date: 2025.8.18
   Changes:
