New arqad honeycomb recipe

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.6.9
+Date: 2025.?.??
+  Changes:
+    - Added arqad honey recipes
+---------------------------------------------------------------------------------------------------
 Version: 1.6.8
 Date: 2025.8.18
   Changes
