--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.7.0
+Date: 2025.8.19
+  Changes:
+    - Cottongut rework
+    - Korlex milk recipe debuff
+---------------------------------------------------------------------------------------------------
 Version: 1.6.9
 Date: 2025.8.19
   Changes:
