--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.7.1
+Date: 2025.9.18
+  Changes:
+    - Added autotech
+---------------------------------------------------------------------------------------------------
 Version: 1.7.0
 Date: 2025.8.19
   Changes:
