--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.7.2
+Date: 2025.9.21
+  Changes:
+    - pyhardmode compat with autotech
+---------------------------------------------------------------------------------------------------
 Version: 1.7.1
 Date: 2025.9.18
   Changes:
