--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,10 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.7.3
+Date: 2025.10.2
+  Changes:
+    - PyHardBlock compat with autotech
+    - PyBlock compat with autotech
+---------------------------------------------------------------------------------------------------
 Version: 1.7.2
 Date: 2025.9.21
   Changes:
