the fish update

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.7.4
+Date: 2025.11.11
+  Changes:
+    - Fish fluid
+---------------------------------------------------------------------------------------------------
 Version: 1.7.3
 Date: 2025.10.2
   Changes:
