--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+
+---------------------------------------------------------------------------------------------------
+Version: 1.8.0
+Date: 2025.11.11
+  Changes:
+    - Fixed error
 ---------------------------------------------------------------------------------------------------
 Version: 1.7.4
 Date: 2025.11.11
