--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,8 @@
-
+---------------------------------------------------------------------------------------------------
+Version: 1.8.1
+Date: 2025.11.11
+  Changes:
+    - maybe fixed something
 ---------------------------------------------------------------------------------------------------
 Version: 1.8.0
 Date: 2025.11.11
